--- a/frontend-mentor/qr-code-component/index.html
+++ b/frontend-mentor/qr-code-component/index.html
@@ -17,14 +17,15 @@
 
 </head>
 <body>
-
+  <main>
   <div class="card">
 
-    <img src="images/image-qr-code.png" alt="QR Code Component Image">
+      <img src="images/image-qr-code.png" alt="QR Code Component Image">
 
-    <p class="improve">Improve your front-end<br>skills by building projects</p>
-    <p class="scan">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to <br> the next level</p>
+      <h1 class="improve">Improve your front-end<br>skills by building projects</h1>
+      <p class="scan">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to <br> the next level</p>
 
-  </div>
+    </div>
+  </main>
 </body>
 </html>
